// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Skeleton Default 1`] = `
.c0 {
  width: 300px;
  display: block;
  background-color: #EBEBE8;
  -webkit-animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
  animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
}

.c1 {
  margin-top: 0;
  margin-bottom: 0;
}

.c1:empty:before {
  content: '\\00a0';
}

<div
  className="c0 c1"
  width="300px"
/>
`;

exports[`Storyshots Atoms / Skeleton Different variants 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Skeleton variants
    </span>
  </div>,
  .c4 {
  width: 200px;
  display: block;
  background-color: #EBEBE8;
  -webkit-animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
  animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
}

.c6 {
  width: 100px;
  display: block;
  background-color: #EBEBE8;
  -webkit-animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
  animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
}

.c8 {
  width: 64px;
  display: block;
  background-color: #EBEBE8;
  -webkit-animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
  animation: hDWTUO 1.5s ease-in-out 0.5s infinite;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
}

.c5:empty:before {
  content: '\\00a0';
}

.c7 {
  height: 100px;
}

.c9 {
  height: 64px;
  border-radius: 50%;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Text
        </span>
      </div>
      <div>
        <div
          className="c4 c5"
          width="200px"
        />
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Rect
        </span>
      </div>
      <div>
        <div
          className="c6 c7"
          width="100px"
        />
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Circle
        </span>
      </div>
      <div>
        <div
          className="c8 c9"
          width={16}
        />
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Atoms / Skeleton Skeleton with delay 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Skeleton with delay
    </span>
  </div>,
  .c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Rect
        </span>
      </div>
      <div />
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
]
`;
